Fix height bug on mobile devices

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
+  padding-top: 20px;
   width: 100%;
   display: grid;
   grid-template-rows: 1fr auto;
