--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -70,7 +70,7 @@
 @media screen and (max-width: 450px) {
   .title {
     h1 {
-      font-size: 22px;
+      font-size: 20px;
     }
   }
 }
